--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
@@ -21,3 +21,6 @@ spring:
     enabled: false
     locations: classpath:db/migration
     baseline-on-migrate: true
+  sql:
+    init:
+      mode: always
