--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
@@ -24,3 +24,9 @@ spring:
   sql:
     init:
       mode: always
+
+metric:
+  time-limit-ms: 500
+
+cache:
+  ttl: 60000
