completed task for 09/06/2025

--- a/transaction-monitor/src/main/resources/application.yaml
+++ b/transaction-monitor/src/main/resources/application.yaml
@@ -15,3 +15,6 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       group-id: t1-metrics-group
+
+jwt:
+  secret: dbahwdbhf@HEBfbJKEfbEHB#Rfnsejfn3Hr#3
