--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,13 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.testProjGroup</groupId>
+            <artifactId>logging-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
